RESOLVED FIXED49651
REGRESSION: Text on <input type="search"> is not spellchecked.
https://bugs.webkit.org/show_bug.cgi?id=49651
Summary REGRESSION: Text on <input type="search"> is not spellchecked.
Hajime Morrita
Reported 2010-11-17 01:09:13 PST
Reproduce: 1. Go to http://www.apple.com/ 2. Enter "wellcome " to the search box on the right top of the page. Then "wellcome" is spellchecked (has red underline) on Safari5. But not for ToT.
Attachments
Patch (7.32 KB, patch)
2010-11-23 23:46 PST, Hajime Morrita
tkent: review+
Hajime Morrita
Comment 1 2010-11-23 23:46:02 PST
Kent Tamura
Comment 2 2010-11-24 22:42:01 PST
Comment on attachment 74725 [details] Patch ok.
Hajime Morrita
Comment 3 2010-11-28 17:07:15 PST
Note You need to log in before you can comment on or make changes to this bug.