2010-11-23  MORITA Hajime  <morrita@google.com>

Reviewed by Kent Tamura.

        REGRESSION: Text on <input type="search"> is not spellchecked.
        https://bugs.webkit.org/show_bug.cgi?id=49651

        * editing/spelling/spellcheck-attribute.html: Added <input type="search"> cases.
        * editing/spelling/spellcheck-attribute-expected.txt:
2010-11-23  MORITA Hajime  <morrita@google.com>

        Reviewed by Kent Tamura.

        REGRESSION: Text on <input type="search"> is not spellchecked.
        https://bugs.webkit.org/show_bug.cgi?id=49651

        TextControlInnerElement::isSpellCheckingEnabled() didn't consider
        non-root shadow elelements and always went false for <input type="search>.
        This change unifies shadow and host handling into Element::isSpellCheckingEnabled().

        Test: editing/spelling/spellcheck-attribute.html

        * dom/Element.cpp:
        (WebCore::Element::isSpellCheckingEnabled):
        * rendering/TextControlInnerElements.cpp:
        * rendering/TextControlInnerElements.h:

Canonical link: https://commits.webkit.org/63241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72782 268f45cc-cd09-0410-ab3c-d52691b4dbfc